--- a/styles/main.css
+++ b/styles/main.css
@@ -25,14 +25,15 @@ header nav .nav-right-section{
     width: 250px;
     height: auto;
     display: flex;
-    justify-content: center;
-    margin-top: 20px;
+    justify-content: flex-end;
+    margin-top: 10px;
     align-items: center;
 }
 
 nav .nav-right-section a {
-    margin-right: 20px;
+    margin-right: 15px;
     color: rgb(66, 66, 66);
+    font-size: 13px;
 }
 
 a {
@@ -53,42 +54,43 @@ nav .nav-right-section .menu-icon{
 
 nav .nav-right-section img{
     border-radius: 50px;
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 /********************* MAIN ***********************/
 main{
-    margin-top: 30px;
+    margin-top: 5px;
     text-align: center;
 }
 
 main .main-logo{
     margin: 0 auto; 
-    margin-bottom: 35px;
+    margin-bottom: 25px;
 }
 
 main .main-logo img {
-    width: 300px;
+    width: 280px;
 }
 
 main .main-input {
     width: 530px;
     margin: 0 auto;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 }
 
 main .main-input-container{
     width: 525px;
+    height: 48px;
     border-radius: 100px;
-    border: 1px solid #dfe1e5;
+    border: 1px solid #dbdbdb;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 main .main-input input{
-    width: 400px;
-    height: 40px;
+    width: 370px;
+    height: 45px;
     border: none;
     outline: none;
 }
@@ -105,6 +107,7 @@ main .main-input .search-item{
     background-position: center;
     width: 18px;
     height: 18px;
+    margin-right: 20px;
 }
 
 
@@ -127,4 +130,29 @@ main .main-input .img-item{
     width: 25px;
     height: 25px;
     cursor: pointer;
+}
+
+
+/*----------------BUTTONS-----------------*/
+main .main-buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 400px;
+    margin: 0 auto;
+}
+
+main .main-buttons input{
+    margin: 10px;
+    padding: 9px 20px;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    background-color: #f8f9fa;
+}
+
+main .main-buttons input:hover{
+    border: 1px solid #d8d8d8;
+    cursor: pointer;
+    box-shadow: 0px 2px 2px rgb(233, 233, 233);
 }
