--- a/styles/main.css
+++ b/styles/main.css
@@ -10,11 +10,13 @@
 header{
     width: 100%;
     height: 60px;
+    
 }
 
 header nav {
     display: flex;
     justify-content: flex-end;
+    margin-top: 0;
 }
 
 ul{
@@ -40,22 +42,30 @@ a {
     color: black;
     outline: none;
     text-decoration: none;
+    
 }
 
-nav .nav-right-section .menu-icon{
-    background-image: url("../img/icons8-menú-en-círculos-30.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    width: 25px;
-    height: 25px;
+nav .nav-right-section .menu-icon img{
+    width: 35px;
+    height: 35px;
     cursor: pointer;
 }
 
 nav .nav-right-section img{
     border-radius: 50px;
-    margin-left: 15px;
+    margin-left: 0px;
+    padding: 5px;
 }
+
+a:hover{
+    text-decoration: underline;
+}
+
+nav a img:hover{
+    background-color: #f0f0f0;
+    padding: 5px;
+}
+
 
 /********************* MAIN ***********************/
 main{
@@ -155,4 +165,39 @@ main .main-buttons input:hover{
     border: 1px solid #d8d8d8;
     cursor: pointer;
     box-shadow: 0px 2px 2px rgb(233, 233, 233);
+}
+
+
+/*--------------------- FOOTER -------------------------*/
+
+footer {
+    display: grid;
+    background-color: #f2f2f2;
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    border-top: 1px solid #e4e4e4;
+}
+
+footer ul{
+    margin: 10px;
+    display: flex;
+    padding-left: 0;
+}
+
+footer .footer-left ul{
+    justify-content: left;
+}
+
+footer .footer-right ul{
+    justify-content: flex-end;
+
+}
+
+footer ul li a{
+    margin: 10px;
 }
