--- a/styles/main.css
+++ b/styles/main.css
@@ -69,7 +69,7 @@ nav a img:hover{
 
 /********************* MAIN ***********************/
 main{
-    margin-top: 5px;
+    margin-top: 200px;
     text-align: center;
 }
 
@@ -79,17 +79,17 @@ main .main-logo{
 }
 
 main .main-logo img {
-    width: 280px;
+    width: 270px;
 }
 
 main .main-input {
-    width: 530px;
+    width: 600px;
     margin: 0 auto;
     margin-bottom: 30px;
 }
 
 main .main-input-container{
-    width: 525px;
+    width: 600px;
     height: 48px;
     border-radius: 100px;
     border: 1px solid #dbdbdb;
@@ -99,7 +99,7 @@ main .main-input-container{
 }
 
 main .main-input input{
-    width: 370px;
+    width: 450px;
     height: 45px;
     border: none;
     outline: none;
@@ -154,17 +154,19 @@ main .main-buttons{
 }
 
 main .main-buttons input{
-    margin: 10px;
+    margin: 5px;
     padding: 9px 20px;
     border: 1px solid #f8f9fa;
     border-radius: 4px;
     background-color: #f8f9fa;
+    color: rgb(46, 46, 46);
 }
 
 main .main-buttons input:hover{
     border: 1px solid #d8d8d8;
     cursor: pointer;
     box-shadow: 0px 2px 2px rgb(233, 233, 233);
+    color: black;
 }
 
 
